[package]
name = "eve"
version = "0.1.0"
edition = "2024"
description = "Un générateur de passphrase sécurisé"
license = "MIT"
readme = "README.md"
keywords = ["passphrase", "security", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
crypto = "0.5.1"
inquire = "0.9.4"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.10.0"
rand_core = "0.10.0"
zeroize = "1.8.2"
